SERVER-11056 Don't assume address uniqueness for detecting root element instantiation